--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="enter" class="btn brand">Entrar</button>
       <button id="show" class="btn quiet">🙈 Mostrar</button>
     </div>
-    <div id="err" class="error">Wrong password. Try again 💗</div>
+    <div id="err" class="error">Ta me tirando, meu???</div>
   </section>
 
   <section id="pager" class="card" style="display:none">
